--- a/app/src/main/res/layout/content_my_story.xml
+++ b/app/src/main/res/layout/content_my_story.xml
@@ -22,10 +22,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="After"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewBefore" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewBefore"
+        app:layout_constraintHorizontal_bias="0.5" />
 
     <TextView
         android:id="@+id/textViewBefore"
@@ -37,7 +38,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Before"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
