--- a/app/src/main/res/layout/content_calculate_bmi.xml
+++ b/app/src/main/res/layout/content_calculate_bmi.xml
@@ -104,6 +104,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="Calculate"
         android:text="@string/buttonCalculate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
