--- a/app/src/main/res/layout/content_edit_profile.xml
+++ b/app/src/main/res/layout/content_edit_profile.xml
@@ -31,12 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
         android:text="Experience :"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender"
-        app:layout_constraintVertical_bias="0.571" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButtonProfile"
