--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextAge" />
 
         <EditText
-            android:id="@+id/editTextSelectImg"
+            android:id="@+id/editTextName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -56,7 +56,7 @@
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextSelectImg" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
         <RadioGroup
             android:id="@+id/radioGroupGender"
@@ -89,7 +89,7 @@
         </RadioGroup>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonLogin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -100,6 +100,7 @@
             android:layout_marginTop="32dp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
+            android:onClick="saveUser"
             android:text="@string/login"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="parent"
