--- a/app/src/main/res/layout/content_edit_profile.xml
+++ b/app/src/main/res/layout/content_edit_profile.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="8dp" />
 
     <EditText
-        android:id="@+id/editTextSelectImg"
+        android:id="@+id/editTextName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -69,7 +69,7 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextSelectImg" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
     <RadioGroup
         android:id="@+id/radioGroupGender"
