--- a/app/src/main/res/layout/activity_upload_video.xml
+++ b/app/src/main/res/layout/activity_upload_video.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.woo.learnfitness.MyStoryActivity">
+    tools:context="com.example.woo.learnfitness.UploadVideoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,14 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_my_story" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabStory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+    <include layout="@layout/content_upload_video" />
 
 </android.support.design.widget.CoordinatorLayout>
