--- a/app/src/main/res/layout/content_my_story.xml
+++ b/app/src/main/res/layout/content_my_story.xml
@@ -21,7 +21,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:text="After"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewAfter"
@@ -36,7 +36,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:text="Before"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewBefore"
@@ -95,6 +95,21 @@
             app:layout_constraintLeft_toRightOf="@+id/imageViewAfter"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageViewAfter" />
+
+        <Button
+            android:id="@+id/buttonUploadImage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="uploadImage"
+            android:text="@string/Save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAfter" />
 
 
     </android.support.constraint.ConstraintLayout>
