--- a/app/src/main/res/layout/content_upload_video.xml
+++ b/app/src/main/res/layout/content_upload_video.xml
@@ -17,7 +17,7 @@
         <VideoView
             android:id="@+id/videoView"
             android:layout_width="0dp"
-            android:layout_height="120dp"
+            android:layout_height="150dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -37,6 +37,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:onClick="selectVideo"
             android:text="@string/ChooseVideo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
