--- a/app/src/main/res/layout/content_upload_video.xml
+++ b/app/src/main/res/layout/content_upload_video.xml
@@ -137,6 +137,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
+            android:onClick="uploadVideo"
             android:text="@string/UploadVideo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
