--- a/app/src/main/res/layout/content_my_video.xml
+++ b/app/src/main/res/layout/content_my_video.xml
@@ -8,4 +8,17 @@
     tools:context="com.example.woo.learnfitness.MyVideoActivity"
     tools:showIn="@layout/activity_my_video">
 
+    <ListView
+        android:id="@+id/listViewVideo"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="0dp" />
+
 </android.support.constraint.ConstraintLayout>
