--- a/app/src/main/res/layout/home_video.xml
+++ b/app/src/main/res/layout/home_video.xml
@@ -53,20 +53,21 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/imageButtonLike"
+        app:layout_constraintLeft_toRightOf="@+id/buttonLike"
         app:layout_constraintTop_toBottomOf="@+id/textViewVideoCategories"
         app:srcCompat="@drawable/ic_favorite_border_black_24dp" />
 
-    <ImageButton
-        android:id="@+id/imageButtonLike"
+    <Button
+        android:id="@+id/buttonLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_thumb_up_black_24dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewVideoCategories"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:drawableLeft="@drawable/ic_thumb_up_black_24dp"
+        android:text="like"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewVideoCategories" />
 
     <TextView
         android:id="@+id/textViewLike"
@@ -76,9 +77,9 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintLeft_toLeftOf="@+id/imageButtonLike"
-        app:layout_constraintRight_toRightOf="@+id/imageButtonLike"
-        app:layout_constraintTop_toBottomOf="@+id/imageButtonLike" />
+        app:layout_constraintLeft_toLeftOf="@+id/buttonLike"
+        app:layout_constraintRight_toRightOf="@+id/buttonLike"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLike" />
 
     <TextView
         android:id="@+id/textViewFavorite"
